# auto_shadow0133

./: .gitignore  Cargo.toml  Cross.toml  README.md  config.toml  cross-aarch64-unknown-linux-gnu.dockerfile
migrations/2022-08-10-230823_init/: up.sql
migrations/2022-11-27-024848_allow_for_link_and_body/: down.sql  up.sql
migrations/2022-12-09-014923_post_categories/: down.sql  up.sql
migrations/2024-03-20-001956_author_index/: down.sql  up.sql
src/: cli.rs  config.rs  log.rs  main.rs  reddit.rs  types.rs  utils.rs
src/commands/: analyze.rs  mod.rs  watch.rs
src/database/: mod.rs  models.rs  schema.rs
src/filter/: allow_or_block_url.rs  contains_rust_code.rs  known_youtube_channel.rs  mod.rs  reputable_author.rs
src/snapshots/: auto_shadow0133__config__tests__sanity.snap
