[package]
name = "auto_shadow0133"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.61"
diesel = { version = "1.4.8", features = ["sqlite"] }
diesel_migrations = { version = "1.4.0", features = ["sqlite"] }
dotenv = "0.15.0"
roux = { version = "2.1.1", default-features = false, features = ["blocking", "rustls"] }
smartstring = "1.0.1"
time = { version = "0.3.13", features = ["formatting"] }
tracing = "0.1.36"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
url = "2.2.2"

[profile.release]
strip = true
