[package]
name = "auto_shadow0133"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.61"
clap = { version = "4.4.6", features = ["derive"] }
diesel = { version = "1.4.8", features = ["sqlite"] }
diesel-derive-enum = { version = "1.1.1", features = ["sqlite"] }
diesel_migrations = { version = "1.4.0", features = ["sqlite"] }
dotenv = "0.15.0"
proc-macro2 = "1.0.49"
pulldown-cmark = "0.9.2"
roux = { version = "2.1.1", default-features = false, features = ["blocking", "rustls"] }
serde = { version = "1.0.152", features = ["derive"] }
smartstring = "1.0.1"
syn = { version = "1.0.107", features = ["parsing"] }
time = { version = "0.3.13", features = ["formatting"] }
toml = "0.5.10"
tracing = "0.1.36"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
url = "2.2.2"

[profile.release]
strip = true

[dev-dependencies]
insta = "1.23.0"
